syntax = "proto3";

option java_package = "br.com.grpcproject";
option java_multiple_files = true;

package br.com.grpcproject;

service ProductService {
    rpc Create(ProductRequest) returns (ProductResponse);
    rpc FindById(RequestById) returns (ProductResponse);
    rpc DeleteById(RequestById) returns (EmptyResponse);
    rpc FindAll(EmptyRequest) returns (ProductResponseList);
}

message ProductResponseList {
    repeated ProductResponse products = 1;
}

message EmptyRequest {}

message EmptyResponse {}

message RequestById {
    int64 id = 1;
}

message ProductRequest {
    string name = 1;
    double price = 2;
    int32 quantity_in_stock = 3;
}

message ProductResponse {
    int64 id = 1;
    string name = 2;
    double price = 3;
    int32 quantity_in_stock = 4;
}

